# pnfs-lattice

./: .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-MIT  LICENSING.md  README.md
cmake/: FindRonDB.cmake
docs/: FEATURES.md  INSTALL_ROCKY.md  MANUAL_INSTALL.md  QUICKSTART.md  architecture.md  config-keys.md  design-gufi-integration.md  mountd-compat.md
include/: backup.h  catalog_delta.h  catalog_image.h  catalog_stats.h  catalogue_internal.h  catalogue_rondb.h  cluster_drain.h  cluster_membership.h  cluster_transport.h  commit_queue.h  compound.h  copy_offload.h  delegation.h  dir_delegation.h  dirent_cache.h  ds_cache.h  ds_capacity.h  ds_gc.h  ds_health.h  ds_nfs_rpc.h  ds_prealloc.h  ds_prepare.h  endian_helpers.h  failover.h  failover_rondb.h  fh_util.h  grace.h  hardlink_2pc.h  health.h  hpc_hint.h  hpc_shared.h  inode_cache.h  io_tracker.h  layout_cache.h  layout_commit_aggregator.h  layout_ds_ids.h  layout_recall.h  layout_types.h  lease_table.h  lock_state.h  (+29 more)
proto/: mds_cluster.proto
scripts/: build-env.sh  build-install-mds.sh  check-style.sh  cmake-fresh.sh  extract-build-lattice.sh  lattice-cluster-setup.sh  lattice-genconfig  package-source.sh  (+7 more)
src/bpf/: CMakeLists.txt  repl_monitor.bpf.c  repl_monitor.c
src/cluster/: CMakeLists.txt  cluster_drain.c  cluster_membership.c  cluster_transport.c  failover.c  failover_rondb.c  grpc_service.c  hardlink_2pc.c  migration.c  rename_2pc.c  subtree_map.c  subtree_split.c
src/common/: CMakeLists.txt  config.c  error.c  heartbeat.c  log.c  mds_metrics.c  mds_tls.c  rondb_stubs.c  threadpool.c
src/fsal_obj/: CMakeLists.txt  ds_file.c  fsal_obj_main.c  layout.c  lease_table.c  placement.c  referral.c
src/mds/: CMakeLists.txt  backup.c  commit_queue.c  compound.c  compound_access.c  compound_data_io.c  compound_internal.h  compound_layout.c  compound_namespace.c  compound_nfsv42.c  compound_session.c  copy_offload.c  delegation.c  dir_delegation.c  dirent_cache.c  ds_cache.c  ds_capacity.c  ds_health.c  ds_nfs_rpc.c  ds_prepare.c  grace.c  hpc_shared.c  inode_cache.c  io_tracker.c  layout_recall.c  lock_state.c  main.c  mds_gss.c  mds_shard.c  mountd_compat.c  mover_util.c  nfs4_cb.c  open_state.c  proxy_io.c  rpc_server.c  session.c  xdr_codec.c  xdr_internal.h  xdr_ops_core.c  xdr_ops_dir_deleg.c  (+2 more)
src/modules/: CMakeLists.txt  README.md
src/modules/ds_gc/: CMakeLists.txt  ds_gc.c  ds_gc_stub.c
src/modules/ds_prealloc/: CMakeLists.txt  ds_prealloc.c  ds_prealloc_stub.c
src/modules/layout_cache/: CMakeLists.txt  layout_cache_stub.c
src/modules/layout_commit_aggregator/: CMakeLists.txt  layout_commit_aggregator_stub.c
src/modules/observability/: CMakeLists.txt  metrics_http_stub.c
src/modules/quota/: CMakeLists.txt  quota_stub.c
src/modules/rebalance/: CMakeLists.txt  rebalance_stub.c
src/modules/replication/: CMakeLists.txt  health_stub.c
src/modules/resilver/: CMakeLists.txt  resilver_stub.c
src/modules/tiering/: CMakeLists.txt  tiering_stub.c
src/modules/wrr/: CMakeLists.txt  wrr_stub.c
src/tools/: CMakeLists.txt  admin_util.c  admin_util.h  bench_rondb_create.c  mds_admin.c  mds_backend_probe.c
tests/: CMakeLists.txt  catalogue_memdb.c  memdb.supp  test_helpers.h
tests/empirical/: README.md  lib_common.sh  phase_a_linux_default.sh  phase_a_per_size.sh  phase_b_flex_files.sh  phase_c_strict_n_to_1.sh  phase_d_pynfs.sh  run_all.sh
tests/empirical/results/: README.md
tests/empirical/results/0003/: PASS_REPORT.md  overall_summary.json  phase_a_linux_default.pcap  phase_a_linux_default_decode.txt  phase_a_linux_default_summary.json  phase_b_flex_files_pynfs.json  phase_b_flex_files_summary.json  phase_c_strict_n_to_1.pcap  phase_c_strict_n_to_1_summary.json  phase_d_pynfs_pynfs.json  phase_d_pynfs_summary.json
tests/empirical/results/0004/: PASS_REPORT.md  overall_summary.json  phase_a_linux_default.pcap  phase_a_linux_default_decode.txt  phase_a_linux_default_summary.json  phase_b_flex_files_pynfs.json  phase_b_flex_files_summary.json  phase_c_strict_n_to_1.pcap  phase_c_strict_n_to_1_summary.json  phase_d_pynfs_classify.txt  phase_d_pynfs_pynfs.json  phase_d_pynfs_summary.json
tests/empirical/results/0004_deleg/: phase_d_pynfs_pynfs.json  phase_d_pynfs_summary.json
tests/empirical/results/0006/: PASS_REPORT.md  overall_summary.json  phase_a_linux_default.pcap  phase_a_linux_default_decode.txt  phase_a_linux_default_summary.json  phase_b_flex_files_pynfs.json  phase_b_flex_files_summary.json  phase_c_strict_n_to_1.pcap  phase_c_strict_n_to_1_summary.json  phase_d_pynfs_pynfs.json  phase_d_pynfs_summary.json
tests/empirical/results/0007/: PASS_REPORT.md  overall_summary.json  phase_a_linux_default.pcap  phase_a_linux_default_decode.txt  phase_a_linux_default_summary.json  phase_b_flex_files_pynfs.json  phase_b_flex_files_summary.json  phase_c_strict_n_to_1.pcap  phase_c_strict_n_to_1_summary.json  phase_d_pynfs_pynfs.json  phase_d_pynfs_summary.json
tests/empirical/results/baseline_lattice_main/: phase_d_pynfs_classify.txt  phase_d_pynfs_pynfs.json  phase_d_pynfs_summary.json
tests/integration/: bench_create_layout_fusion.c  nfs_client_test.sh  nfs_stripe_test.sh  test_client_lifecycle.c  test_cluster.c  test_failover.c
tests/unit/: test_backup.c  test_catalog_delta.c  test_catalog_image.c  test_catalogue.c  test_cluster_membership.c  test_cluster_transport.c  test_commit_queue.c  test_compound.c  test_compound_cluster.c  test_config.c  test_coord_shared_state.c  test_daemon_integration.c  test_delegation.c  test_dir_delegation.c  test_dirent_cache.c  test_drain.c  test_ds_capacity.c  test_ds_gc.c  test_ds_health.c  test_ds_layout_idx.c  test_ds_prealloc.c  test_ds_prealloc_batch.c  test_failover.c  test_hpc_shared.c  test_inline_data.c  test_inode_cache.c  test_layout.c  test_layout_cache.c  test_layout_commit_aggregator.c  test_layout_recall.c  test_lock_state.c  test_log.c  test_mds_admin.c  test_mds_gss.c  test_mds_metrics.c  test_mds_shard.c  test_mds_tls.c  test_migration.c  test_mountd_compat.c  test_namespace.c  (+22 more)
(+26 files in other folders)
